# serializer version: 1
# name: test_device_info[device_connections]
  DeviceRegistryEntrySnapshot({
    'area_id': None,
    'config_entries': <ANY>,
    'configuration_url': None,
    'connections': set({
    }),
    'disabled_by': None,
    'entry_type': <DeviceEntryType.SERVICE: 'service'>,
    'hw_version': None,
    'id': <ANY>,
    'identifiers': set({
      tuple(
        'nyt_games',
        '218886794_connections',
      ),
    }),
    'is_new': False,
    'labels': set({
    }),
    'manufacturer': 'New York Times',
    'model': None,
    'model_id': None,
    'name': 'Connections',
    'name_by_user': None,
    'primary_config_entry': <ANY>,
    'serial_number': None,
    'suggested_area': None,
    'sw_version': None,
    'via_device_id': None,
  })
# ---
# name: test_device_info[device_spelling_bee]
  DeviceRegistryEntrySnapshot({
    'area_id': None,
    'config_entries': <ANY>,
    'configuration_url': None,
    'connections': set({
    }),
    'disabled_by': None,
    'entry_type': <DeviceEntryType.SERVICE: 'service'>,
    'hw_version': None,
    'id': <ANY>,
    'identifiers': set({
      tuple(
        'nyt_games',
        '218886794_spelling_bee',
      ),
    }),
    'is_new': False,
    'labels': set({
    }),
    'manufacturer': 'New York Times',
    'model': None,
    'model_id': None,
    'name': 'Spelling Bee',
    'name_by_user': None,
    'primary_config_entry': <ANY>,
    'serial_number': None,
    'suggested_area': None,
    'sw_version': None,
    'via_device_id': None,
  })
# ---
# name: test_device_info[device_wordle]
  DeviceRegistryEntrySnapshot({
    'area_id': None,
    'config_entries': <ANY>,
    'configuration_url': None,
    'connections': set({
    }),
    'disabled_by': None,
    'entry_type': <DeviceEntryType.SERVICE: 'service'>,
    'hw_version': None,
    'id': <ANY>,
    'identifiers': set({
      tuple(
        'nyt_games',
        '218886794_wordle',
      ),
    }),
    'is_new': False,
    'labels': set({
    }),
    'manufacturer': 'New York Times',
    'model': None,
    'model_id': None,
    'name': 'Wordle',
    'name_by_user': None,
    'primary_config_entry': <ANY>,
    'serial_number': None,
    'suggested_area': None,
    'sw_version': None,
    'via_device_id': None,
  })
# ---
